--- a/my-demo-app/package.json
+++ b/my-demo-app/package.json
@@ -9,6 +9,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
+    "redux": "^4.0.5",
     "tree-node-cli": "^1.2.5",
     "treer": "^1.0.4"
   },
