--- a/ReactNativeApp/ios/Podfile
+++ b/ReactNativeApp/ios/Podfile
@@ -77,6 +77,8 @@ target 'ReactNativeApp' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
+
   target 'ReactNativeAppTests' do
     inherit! :complete
     # Pods for testing
